compare and change password
